welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:23: warning: enclosing method serpent has result type Unit: return value discarded
  return murs
  ^SnakeBuggle:28: error: type mismatch;
 found   : Unit
 required: Int
do {nombres_mur = serpent(nombres_mur)} while(postion_finale()==false)
                         ^